--- a/index.html
+++ b/index.html
@@ -3,27 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <title>Product Filter</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="root"></div>
     <!-- Load React -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script
-      src="https://unpkg.com/react@17/umd/react.development.js"
       crossorigin
+      src="https://unpkg.com/react@17/umd/react.production.min.js"
     ></script>
     <script
-      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
       crossorigin
+      src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"
     ></script>
     <!-- Load React Components -->
-    <!-- Ideally the files below would be modules served on demand by a dedicated server and not just loaded at the same
-      time like what’s happening here. I just don’t want to set up a local server (no matter how simple) for such a
-      small project. That being said, I’ve added a few comments on each of the files referenced below, containing the
-      expected import/export directives (and other smaller changes) if those files were indeed modules. If that was the
-      case, I’d also add the type = ‘module’ attribute to the element referencing index.js and change each file
-      extension below to .mjs. -->
+    <!-- Ideally the files below should be modules served on demand by a dedicated server. -->
     <script src="./components/TableBody.js"></script>
     <script src="./components/Table.js"></script>
     <script src="./components/Checkbox.js"></script>
